--- a/.env
+++ b/.env
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel_livewire
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=curso_laravel_livewire
+DB_USERNAME=carloszucolli
+DB_PASSWORD=cazzac321
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
