--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=curso_laravel_livewire
-DB_USERNAME=carloszucolli
+DB_USERNAME=root
 DB_PASSWORD=cazzac321
 
 BROADCAST_DRIVER=log
